Add GUI support & Main GUI

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,3 +7,5 @@ commands:
     description: The main command for Better RPG
     permission: brpg.main
     aliases: [brpg]
+  test:
+    description: none
